# RoboCompanion

./: .gitignore  .gitmodules  README.md  dev.py  requirements.txt
config/: help.launch  help_me.launch  help_me.yaml
person_tracking/: CMakeLists.txt  current_pose.py  package.xml
person_tracking/refer_scripts/: coordetector.py  follow_person_shrikar.py  mediapie_img_oviya.py  person_detecor_oviya.py  reid_minimal.py
person_tracking/refer_scripts/Move to Pose/: Nav_Man.py  mockup.py  mockup_pose.py  move_arm_to_bowl.py  move_arm_to_pose.py
person_tracking/scripts/: bag_pickup.py  follow_me.py  greeting.py  head_to_pose.py  person_follow_macOS.py  person_follow_with_head.py  person_tracker.py  person_tracker_node.py  pointing.py  raised_hands.py  raising_hand.py  raising_hand_python.py  start_tasks.sh  stop_confirmation.py
person_tracking_macOS/refer_scripts/: carry_bag.yaml  go_perceive_pick_place_new_shrikar.launch  go_perceive_pick_place_updated_new_shrikar.yaml  help_me_carry_sm.py
person_tracking_macOS/scripts/: bag_pickup_node.py  beverage_location.py  crop_bbox.py  greeting.py  person_follow_macOS.py  person_follow_with_head.py  person_tracker.py  person_tracker_node.py  person_yolo.py  pickup_bag.py  pointing.py  speak.py  stop_confirmation.py
